--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "semantic-ui";
+
+
+body{
+  background-color: #DADADA;
+}
+
+form{
+  margin-top: 3em;
+  margin-bottom: 1em;
+}
+
+.ui .table{
+  margin: 1em auto;
+}
+
+.main.container {
+  margin-top: 6em;
+  margin-bottom: 5em;
+  min-height: 35em;
+}
+
+.ui.menu .item > img:not(.ui) {
+  width: 5.5em;
+}
+
+.field_with_errors {
+  border: 1px solid #E0B4B4 !important;
+  box-shadow: 0px 0px 0px 1px #E0B4B4 inset, 0px 0px 0px 0px transparent !important;
+}
+
+.black {
+  color: black !important;
+}
