--- a/app/views/home/form.html.erb
+++ b/app/views/home/form.html.erb
@@ -1,2 +1,41 @@
-<h1>Home#form</h1>
-<p>Find me in app/views/home/form.html.erb</p>
+<div class="ui orange segment">
+  <h2 class="ui header" >Publicaciones</h2>
+  <div style="overflow-x:auto;">
+    <table class="ui selectable collapsing table">
+      <thead>
+      <tr>
+        <th>Acciones</th>
+        <th>NRO_FOTOS</th>
+        <th>REPUBLICADO</th>
+        <th>DIAS_PUBLICACION</th>
+        <th>TIENE_AREA</th>
+        <th>TIENE_BARRIO</th>
+        <th>TIENE_CIUDAD</th>
+        <th>TIENE_COMENTARIO</th>
+        <th>TIENE_NRO_BANOS</th>
+        <th>TIENE_NRO_CUARTOS</th>
+        <th>TIENE_NRO_GARAJES</th>
+        <th>TIENE_VIDEO</th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @list.each do |row| %>
+        <tr>
+          <td><%= link_to 'validar', home_validate_path(row.id) ,remote: true %></td>
+          <td><%= row.NRO_FOTOS %></td>
+          <td><%= row.REPUBLICADO %></td>
+          <td><%= row.DIAS_PUBLICACION %></td>
+          <td><%= row.TIENE_AREA %></td>
+          <td><%= row.TIENE_BARRIO %></td>
+          <td><%= row.TIENE_CIUDAD %></td>
+          <td><%= row.TIENE_COMENTARIO %></td>
+          <td><%= row.TIENE_NRO_BANOS %></td>
+          <td><%= row.TIENE_NRO_CUARTOS %></td>
+          <td><%= row.TIENE_NRO_GARAJES %></td>
+          <td><%= row.TIENE_VIDEO %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
